# multiverse-device-rescue

./: .gitignore  README.md  pyproject.toml  rescue.spec  setup.py
docs/: REMEDIATION_CATALOG.md  ROADMAP.md  ROADMAP_STATUS.md  THREAT_REMEDIATION.md  threat_remediation_map.yaml
profiles/: ai_worm_response.yaml  digital_security_reset.yaml  home_for_the_holidays.yaml
rescue/: __init__.py  cli.py  command.py  fsbounds.py  guides.py  models.py  module_base.py  orchestrator.py  profiles.py  registry.py  remediation.py  runtime.py  session.py  threat_map.py
scripts/: build.py  generate_integrity_manifest.py
tests/: test_action_semantics.py  test_ai_worm_profile.py  test_all_shipped_content.py  test_cli.py  test_cli_copilot.py  test_cli_guide.py  test_cli_update.py  test_command.py  test_fsbounds.py  test_guides.py  test_ioc_loader.py  test_models.py  test_module_accessibility_check.py  test_module_accessibility_permissions.py  test_module_ai_threat_indicators.py  test_module_ai_worm_filesystem.py  test_module_ai_worm_git_ssh.py  test_module_ai_worm_lateral.py  test_module_ai_worm_network.py  test_module_ai_worm_persistence.py  test_module_airdrop_config.py  test_module_airdrop_security_check.py  test_module_airport_wifi_scan.py  test_module_antivirus_status.py  test_module_app_crash_analyzer.py  test_module_app_permissions.py  test_module_appleid_security_check.py  test_module_application_compatibility.py  test_module_application_crash_report.py  test_module_audio_config.py  test_module_audio_troubleshoot.py  test_module_automatic_updates.py  test_module_base.py  (+265 more)
(+454 files in other folders)
