[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiverse-device-rescue"
version = "0.1.0"
description = "Modern system diagnostic, repair, and maintenance toolkit"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "textual>=8,<9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pyinstaller>=6.0"]
ai = ["anthropic>=0.40", "openai>=1.50", "httpx>=0.27"]

[project.scripts]
rescue = "rescue.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["rescue*"]
